Fixed Minor Typo

--- a/join.html
+++ b/join.html
@@ -64,7 +64,7 @@
           <div class="dropmenu">
             <a class="drop-btn" href="#">MEMBERSHIP</a>
             <div class="drop-content">
-              <a href="#">JOINT TODAY</a>
+              <a href="#">JOIN TODAY</a>
               <a href="#">MEMBER EVENTS</a>
               <a href="#">MEMBER NEWSLETTER</a>
             </div>
