--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="styles/meyer-reset.css">
     <link rel="stylesheet" href="styles/main.css">
-
+    <link rel="stylesheet" href="styles/main-mobile.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
