--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
+
+<!-- 
+  DEVELOPER NOTE: THIS SITE IS NOT ASSOCIATED WITH ROCKY MOUNTAIN CONSERVANCY.  
+  THIS SITE WAS DEVELOPED FOR LEARNING PURPOSES ONLY.
+  THIS LEARNING SITE IS STILL UNDER CONSTRUCTION
+ -->
+ 
 <html lang="en">
   <head>
-    <!-- START CREATE REACT APP CODE -->
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
@@ -14,16 +20,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <!-- END CREATE REACT APP CODE -->
+    
     <title>Romocon</title>
 
     <!-- FONT AWESOME CDN -->
