--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   THIS SITE WAS DEVELOPED FOR LEARNING PURPOSES ONLY.
   THIS LEARNING SITE IS STILL UNDER CONSTRUCTION
  -->
- 
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -51,9 +51,21 @@
           </div>
           <a class="donate" href='#'>DONATE</a>
           <div class="header-icons">
-            <span><i class="fab fa-facebook-f"></i></span>
-            <span><i class="fab fa-instagram"></i></span>
-            <span><i class="fab fa-twitter"></i></span>
+            <span>
+              <a href="https://www.facebook.com/RockyMountainConservancy/" target="_blank">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </span>
+            <span>
+              <a href="https://www.instagram.com/rmconservancy/?hl=en" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </span>
+            <span>
+              <a href="https://twitter.com/?lang=en" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </span>
           </div>       
         </div>
         <nav class="header-bottom-row">
@@ -171,9 +183,21 @@
         <section class="footer-col">
           <h3>CONNECT</h3>
           <div id="socMenu">
-            <span><i class="fab fa-facebook-f"></i></span>
-            <span><i class="fab fa-instagram"></i></span>
-            <span><i class="fab fa-twitter"></i></span>
+            <span>
+              <a href="https://www.facebook.com/RockyMountainConservancy/" target="_blank">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </span>
+            <span>
+              <a href="https://www.instagram.com/rmconservancy/?hl=en" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </span>
+            <span>
+              <a href="https://twitter.com/?lang=en" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </span>
           </div>
         </section>
 
