Minor code/note cleanup

--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta charset="utf-8">
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -39,7 +34,7 @@
         <h3>DISCLAIMER</h3>
         <p class="txtDisclaimer">
           THIS SITE IS FOR LEARING PURPOSES ONLY.
-          IT IS IN NOW WAY ASSOCIATED WITH ROCKY 
+          IT IS IN NO WAY ASSOCIATED WITH ROCKY 
           MOUNTAIN CONSERVANCY  
         </p>
         <span class="closeButton" onclick="closeBox()">X</span>
@@ -71,7 +66,7 @@
         <nav class="header-bottom-row">
           <a href="index.html">HOME</a>
           <div class="dropmenu">
-            <a class="drop-btn" href="#">MEMBERSHIP</a>
+            <a class="drop-btn" href="join.html">MEMBERSHIP</a>
             <div class="drop-content">
               <a href="join.html">JOIN TODAY</a>
               <a href="#">MEMBER EVENTS</a>
