--- a/join.html
+++ b/join.html
@@ -8,7 +8,7 @@
 
 <html lang="en">
   <head>
-    <!-- START CREATE REACT APP CODE -->
+    
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
@@ -21,17 +21,8 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <!-- END CREATE REACT APP CODE -->
-    <title>Romocon</title>
+   
+    <title>Romocon - Membership</title>
 
     <!-- FONT AWESOME CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -49,7 +40,7 @@
         <h3>DISCLAIMER</h3>
         <p class="txtDisclaimer">
           THIS SITE IS FOR LEARING PURPOSES ONLY.
-          IT IS IN NOW WAY ASSOCIATED WITH ROCKY 
+          IT IS IN NO WAY ASSOCIATED WITH ROCKY 
           MOUNTAIN CONSERVANCY  
         </p>
         <span class="closeButton" onclick="closeBox()">X</span>
@@ -61,9 +52,21 @@
           </div>
           <a class="donate" href='#'>DONATE</a>
           <div class="header-icons">
-            <span><i class="fab fa-facebook-f"></i></span>
-            <span><i class="fab fa-instagram"></i></span>
-            <span><i class="fab fa-twitter"></i></span>
+              <span>
+                  <a href="https://www.facebook.com/RockyMountainConservancy/" target="_blank">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                </span>
+                <span>
+                  <a href="https://www.instagram.com/rmconservancy/?hl=en" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </span>
+                <span>
+                  <a href="https://twitter.com/?lang=en" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </span>
           </div>       
         </div>
         <nav class="header-bottom-row">
@@ -157,9 +160,21 @@
         <section class="footer-col">
           <h3>CONNECT</h3>
           <div id="socMenu">
-            <span><i class="fab fa-facebook-f"></i></span>
-            <span><i class="fab fa-instagram"></i></span>
-            <span><i class="fab fa-twitter"></i></span>
+            <span>
+              <a href="https://www.facebook.com/RockyMountainConservancy/" target="_blank">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </span>
+            <span>
+              <a href="https://www.instagram.com/rmconservancy/?hl=en" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </span>
+            <span>
+              <a href="https://twitter.com/?lang=en" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </span>
           </div>
         </section>
 
