Added href attributes to links

--- a/join.html
+++ b/join.html
@@ -50,7 +50,7 @@
           <div id="logo-container">
             <img id="logo" src="images/romocon-logo.png" alt="ROMOCON Logo">
           </div>
-          <a class="donate" href='#'>DONATE</a>
+          <a class="donate" href='construction.html'>DONATE</a>
           <div class="header-icons">
               <span>
                   <a href="https://www.facebook.com/RockyMountainConservancy/" target="_blank">
@@ -72,30 +72,30 @@
         <nav class="header-bottom-row">
           <a href="index.html">HOME</a>
           <div class="dropmenu">
-            <a class="drop-btn" href="#">MEMBERSHIP</a>
+            <a class="drop-btn" href="join.html">MEMBERSHIP</a>
             <div class="drop-content">
-              <a href="#">JOIN TODAY</a>
-              <a href="#">MEMBER EVENTS</a>
-              <a href="#">MEMBER NEWSLETTER</a>
+              <a href="join.html">JOIN TODAY</a>
+              <a href="join.html">MEMBER EVENTS</a>
+              <a href="join.html">MEMBER NEWSLETTER</a>
             </div>
           </div>
-          <a href="#">SHOP</a>
+          <a href="construction.html">SHOP</a>
           <div class="dropmenu">
             <a class="drop-btn" href="#">PROJECTS</a>
             <div class="drop-content">
-              <a href="#">CURRENT PROJECTS</a>
-              <a href="#">UPCOMING PROJECTS</a>
-              <a href="#">COMPLETED PROJECTS</a>
+              <a href="construction.html">CURRENT PROJECTS</a>
+              <a href="construction.html">UPCOMING PROJECTS</a>
+              <a href="construction.html">COMPLETED PROJECTS</a>
             </div>
           </div>
           <div class="dropmenu">
             <a class="drop-btn" href="#">LEARN</a> 
             <div class="drop-content" id="dropContentEnd">
-              <a href="#">FIELD INSTITUTE</a>
-              <a href="#">CONSERVATION CORPS</a>
-              <a href="#">HIGH SCHOOL LEADERSHIP CORPS</a>
-              <a href="#">EDUCATION FELLOWSHIPS</a>
-              <a href="#">RMNP FELLOWSHIPS</a>
+              <a href="construction.html">FIELD INSTITUTE</a>
+              <a href="construction.html">CONSERVATION CORPS</a>
+              <a href="construction.html">HIGH SCHOOL LEADERSHIP CORPS</a>
+              <a href="construction.html">EDUCATION FELLOWSHIPS</a>
+              <a href="construction.html">RMNP FELLOWSHIPS</a>
             </div>
           </div>         
         </nav>
